# swagger/swagger.json
@@ -1,16 +1,11 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "beego Test API",
-        "description": "beego has a very cool tools to autogenerate documents for your API",
+        "title": "yuedan API",
+        "description": "Document of APIs",
         "version": "1.0.0",
-        "termsOfService": "http://beego.me/",
         "contact": {
-            "email": "astaxie@gmail.com"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+            "email": "http://www.panruifeng.com"
         }
     },
     "basePath": "/v1",
